// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with a single author 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "#006699",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`2. with a given section colour 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`3. with given styles 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "red",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "textDecorationLine": "underline",
      }
    }
  >
    Alexandra Frean
  </Text>
</View>
`;

exports[`4. with a a very long byline 1`] = `
<View>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>
  <Text
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
  >
    , Environment Editor, 
  </Text>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>
  <Text
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
  >
    , Environment Editor, 
  </Text>
  <Text
    accessibilityRole="link"
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
        "textDecorationLine": "underline",
      }
    }
  >
    Camilla Long
  </Text>
  <Text
    style={
      Object {
        "color": "blue",
        "flexDirection": "row",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
        "lineHeight": 15,
      }
    }
  >
    , Environment Editor
  </Text>
</View>
`;
